# Analytical-Fire

./: .cursorrules  .gitignore
.github/workflows/: deploy.yml
agents/: PROBLEM_DISCOVERY_README.md  problem_discovery_agent.py  start_discovery_agent.sh
backend/: main.py
backend/app/routers/: agents.py  discovery.py  knowledge.py  leaderboards.py
backend/app/schemas/: leaderboard.py
backend/app/services/: engagement_bot.py  onboarding_flow.py
docs/: ESSENTIAL_WORKFLOW.md  ORGANIC_GROWTH.md
examples/: essential_workflow_example.py
mcp-server/: README.md  aifai_mcp.py  continuous_agent.py  pyproject.toml
scripts/: run_engagement_bot.py  run_visibility_audit.py
sdk/python/: __init__.py  aifai_client.py  workflow_helpers.py
